--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   background-color: #0000ff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -18,4 +22,23 @@ body {
 
 * {
   box-sizing: border-box;
+}
+
+/* || SCROLLBAR STYLING */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #0000ff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fff;
+  border-radius: 5px;
+  min-height: 40px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ebebeb;
 }
